swagger member store docs
